src/test/deca/context/invalid/declar_var_with_voidtype.deca
//Test invalide qui lance une erreur contextuelle suite à la verification de la condition : 3.17

//Resultat: 10 2

{
    void x;
}
